# RetailOS

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DATABASE.md  README.md  SPRINT0.md  TASKS.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/common/: base_model.py  db_utils.py  pagination.py  response.py  schemas.py
backend/app/core/: config.py  db.py  exceptions.py  logging.py  security.py  tenant_context.py
backend/app/core/middleware/: request_id.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 0a79316d69b0_seed_products_catalog_permissions.py  0abf28a92bd6_seed_default_roles_and_permissions.py  2990ee6aa213_inventory_foundation.py  554ff24b3859_seed_default_units.py  5e3f8755c736_products_and_catalog_foundation.py  7cfdb65bb2f2_seed_inventory_permissions.py  a2cce9c09038_identity_and_organization_foundation.py
backend/app/modules/: README.md
backend/app/modules/audit/: models.py  repository.py  service.py
backend/app/modules/auth/: api.py  dependencies.py  models.py  repository.py  schemas.py  service.py
backend/tests/integration/: conftest.py  test_auth_login.py  test_auth_my_branches.py  test_auth_password_reset.py  test_auth_refresh.py  test_auth_sessions.py  test_company_branch_management.py  test_company_signup.py  test_dashboard.py  test_exceptions.py  test_health.py  test_inventory.py  test_inventory_concurrency.py  test_products_catalog.py  test_products_catalog_csv.py  test_user_management.py
backend/tests/unit/: test_base_model.py  test_config.py  test_db.py  test_response.py  test_security.py
frontend/: README.md  (+3 more)
(+165 files in other folders)
