[project]
name = "retailos-api"
version = "0.1.0"
description = "RetailOS backend API (FastAPI, modular monolith)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.9,<3.0",
    "pydantic[email]>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "pyjwt>=2.9,<3.0",
    "argon2-cffi>=23.1,<24.0",
    "redis>=5.1,<6.0",
    "structlog>=24.4,<25.0",
    "python-multipart>=0.0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=6.0,<7.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.7,<1.0",
    "mypy>=1.13,<2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Alembic autogenerate output is semi-generated, not hand-styled — don't
# hold it to the same line-length/import-sort bar as application code.
extend-exclude = ["app/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.core.*"
strict = true

[[tool.mypy.overrides]]
module = "app.common.*"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["app/migrations/*"]
